step 3: get some React going
todos left:
- state management for patients
- logout
- update user
- clean up ORM has many
